specs/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress  
metadata:  
  name: java-webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:  
  rules:
  - host: www.webanuncios.com
    http:
      paths:
      - path: /anuncios(/|$)(.*)
        backend:
          serviceName: java-webapp
          servicePort: 8080
